new json method for worklog

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
     </parent>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api (JUnit)-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
